[gd_scene load_steps=4 format=3 uid="uid://cfynw7ir82qmn"]

[ext_resource type="Script" uid="uid://b3bmayj4dgk6r" path="res://scripts/main_game/tool.gd" id="1_63hj3"]
[ext_resource type="Texture2D" uid="uid://cq78o0i5acgfx" path="res://assets/icons/icon.svg" id="3_x1weu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b4n6q"]
radius = 38.0

[node name="Tool" type="Area2D"]
script = ExtResource("1_63hj3")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_x1weu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b4n6q")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
